--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript{
+    ext{
+        core_ktx = '1.8.0'
+        appcompat = '1.4.2'
+        fragment_ktx = '1.5.0'
+        material = '1.6.4'
+        constraintlayout = '2.1.4'
+        reflect = '1.7.0'
+        legacy_support = '1.0.0'
+        lifecycle_extensions = '2.2.0'
+        junit = '4.13.2'
+        jupiter = '5.8.2'
+        ext_junit = '1.1.3'
+        espresso = '3.4.0'
+        dagger = '2.42'
+        lifecycle_extensions = '2.2.0'
+        retrofit = '2.9.0'
+        glide = '4.13.0'
+        dagger = '2.42'
+        mockito = '4.6.1'
+        mockito_kotlin = '4.0.0'
+        mockk = '1.12.3'
+        room = '2.4.2'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
 task clean(type: Delete) {
