--- a/mvvm_dagger_room_retro_test/build.gradle
+++ b/mvvm_dagger_room_retro_test/build.gradle
@@ -8,8 +8,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.orderbird.safelycamera"
-        minSdk 29
+        applicationId "com.alidoran.mvvm_dagger_room_retro_test"
+        minSdk 28
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -30,33 +30,27 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    buildFeatures{
-        viewBinding true
-        dataBinding true
-    }
-
 }
 
 dependencies {
 
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "androidx.fragment:fragment-ktx:$fragment_ktx"
     implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$reflect"
-    implementation "androidx.legacy:legacy-support-v4:$legacy_support"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_extensions"
     testImplementation "junit:junit:$junit"
-    testImplementation "rg.junit.jupiter:junit-jupiter:$jupiter"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
 
-    //dagger
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+
+    //Dagger
     kapt "com.google.dagger:dagger-compiler:$dagger"
     implementation "com.google.dagger:dagger:$dagger"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger"
 
+    //Room
+    implementation "androidx.room:room-runtime:$room"
+    kapt "androidx.room:room-compiler:$room"
 }
