--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ rootProject.name = "Applications"
 include ':safely_camera'
 include ':dagger_room_mvvm'
 include ':weather'
+include ':mvvm_dagger_room_retro_test'
