--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript{
         core_ktx = '1.8.0'
         appcompat = '1.4.2'
         fragment_ktx = '1.5.0'
-        material = '1.6.4'
+        material = '1.5.0'
         constraintlayout = '2.1.4'
         reflect = '1.7.0'
         legacy_support = '1.0.0'
@@ -23,12 +23,17 @@ buildscript{
         mockk = '1.12.3'
         room = '2.4.2'
     }
+
+    dependencies {
+        // hilt classpath
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+    }
 }
 
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
