--- a/mvvm_dagger_room_retro_test/src/main/AndroidManifest.xml
+++ b/mvvm_dagger_room_retro_test/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alidoran.mvvm_dagger_room_retro_test">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Applications">
         <activity
-            android:name=".MdrrtActivity"
+            android:name=".view.MdrrtActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
