--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ buildscript{
 
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1"
     }
     repositories {
         google()
@@ -61,7 +62,7 @@ buildscript{
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
