--- a/mvvm_hilt_room_retro_test/build.gradle
+++ b/mvvm_hilt_room_retro_test/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.dagger.hilt.android'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -15,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "com.alidoran.mvvm_hilt_room_retro_test.MyTestRunner"
+        testInstrumentationRunner "com.alidoran.mvvm_hilt_room_retro_test.HiltTestRunner"
     }
 
     buildTypes {
@@ -36,66 +38,47 @@ android {
         viewBinding true
         dataBinding true
     }
-
-    testOptions {
-        unitTests.all {
-            useJUnitPlatform()
-            systemProperty "junit.jupiter.testinstance.lifecycle.default", "per_method"
-            //Test default instance will be changed by this line
-            systemProperty "junit.jupiter.execution.parallel.enabled", "true"
-        }
-        unitTests.includeAndroidResources  = true
-        unitTests.returnDefaultValues = true
-    }
 }
 
 dependencies {
-
+    //region General
     implementation "androidx.core:core-ktx:$core_ktx"
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
     implementation "androidx.fragment:fragment-ktx:$fragment_ktx"
+    //endregion
 
-    //Retrofit
+    //region Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit2"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2"
+    //endregion
 
-    //Hilt
+    //region Hilt
     implementation "com.google.dagger:hilt-android:$dagger"
+    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
     kapt "com.google.dagger:hilt-compiler:$dagger"
     androidTestImplementation "com.google.dagger:hilt-android-testing:$dagger"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$dagger"
     implementation "androidx.multidex:multidex:$multi_dex"
+    //endregion
 
-    //Room
+    //region Room
     implementation "androidx.room:room-ktx:$room"
     kapt "androidx.room:room-compiler:$room"
-    androidTestImplementation "androidx.room:room-testing:$room"
+    //endregion
 
-    //Navigation
+    //region Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
     implementation "androidx.navigation:navigation-ui-ktx:$navigation"
+    //endregion
 
-    //Test
-    debugImplementation 'androidx.fragment:fragment-testing:1.5.2'
-    testImplementation "junit:junit:$junit"
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit_vintage"
-    testImplementation "org.junit.jupiter:junit-jupiter:$junit_jupiter"
-    androidTestImplementation "androidx.test:core:$test_core"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-//    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "androidx.test:runner:1.4.0"
-
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-
-    //Lifecycle
+    //region Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-process:2.5.1"
+    //endregion
 
     //picasso
     implementation "com.squareup.picasso:picasso:2.71828"
@@ -103,6 +86,31 @@ dependencies {
     //RecyclerView
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
+    //region Local Unit Tests
+    implementation 'androidx.test:core:1.4.0'
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit_vintage"
+    testImplementation "junit:junit:$junit"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.junit.jupiter:junit-jupiter:$junit_jupiter"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation "org.mockito:mockito-core:4.6.1"
+    //endregion
+
+    //region Instrumented Unit Tests
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.43.2'
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.2'
+    androidTestImplementation "junit:junit:4.12"
+    androidTestImplementation "androidx.test:core:$test_core"
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.room:room-testing:$room"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.43.2'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "org.mockito:mockito-core:4.6.1"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.3"
+    //endregion
 }
 
 kapt {
