New Card XML Upgrade Gradle

--- a/common_library/build.gradle
+++ b/common_library/build.gradle
@@ -37,6 +37,7 @@ android {
             systemProperty "junit.jupiter.execution.parallel.enabled", "true"
         }
     }
+    namespace 'ali.doran.common_library'
 }
 
 dependencies {
