--- a/mvvm_hilt_room_retro_test/build.gradle
+++ b/mvvm_hilt_room_retro_test/build.gradle
@@ -38,6 +38,7 @@ android {
         viewBinding true
         dataBinding true
     }
+    namespace 'com.alidoran.mvvm_hilt_room_retro_test'
 }
 
 dependencies {
@@ -87,7 +88,7 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     //region Local Unit Tests
-    implementation 'androidx.test:core:1.4.0'
+    implementation 'androidx.test:core:1.5.0'
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit_vintage"
     testImplementation "junit:junit:$junit"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
@@ -98,8 +99,8 @@ dependencies {
     //endregion
 
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.43.2'
-    debugImplementation 'androidx.fragment:fragment-testing:1.5.2'
-    androidTestImplementation "junit:junit:4.12"
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.5'
+    androidTestImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test:core:$test_core"
     androidTestImplementation "androidx.test:runner:1.4.0"
     androidTestImplementation "androidx.room:room-testing:$room"
