--- a/secure_data/build.gradle
+++ b/secure_data/build.gradle
@@ -18,11 +18,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
-
     packagingOptions {
-        exclude("META-INF/LICENSE.md")
-        exclude("META-INF/LICENSE-notice.md")
+        resources {
+            excludes += ['META-INF/LICENSE.md', 'META-INF/LICENSE-notice.md']
+        }
     }
+
 
     buildTypes {
         release {
@@ -55,6 +56,7 @@ android {
         viewBinding true
         dataBinding true
     }
+    namespace 'ali.doran.securedata'
 }
 
 dependencies {
