--- a/safely_camera/build.gradle
+++ b/safely_camera/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
 
+    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout"
+
 }
